--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,8 @@ jobs:
         PRE_BUILD_GIT_SCAN_FLAG: 1
     steps:
     - uses: actions/checkout@v2
+    - name: Scan Repo Dependencies
+      run: bash ./scripts/reposcan.sh
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag $IMAGE_NAME
     - name: Twistcli download
