--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  build_and_scan:
 
     runs-on: ubuntu-latest
     env:
@@ -21,10 +21,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Twistcli download
       run: curl -s -k -u $PC_USER:$PC_PASS $PC_CONSOLE_URL/api/v1/util/twistcli -v -o twistcli;chmod +x twistcli
-    - name: Scan Repo Dependencies
+    - name: Scan Repo with Prisma Cloud
       run: bash ./scripts/reposcan.sh
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag $IMAGE_NAME
-    - name: Scan Image
+    - name: Scan Image with Prisma Cloud
       run: ./twistcli images scan --u $PC_USER --p $PC_PASS --address $PC_CONSOLE_URL --details $IMAGE_NAME
 
