--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,7 +40,7 @@ jobs:
         soft_fail: true # optional: do not return an error code if there are failed checks
         framework: kubernetes # optional: run only on a specific infrastructure {cloudformation,terraform,kubernetes,all}
         quiet: true
-        output_format: github_failed_only # optional: the output format, one of: cli, json, junitxml, github_failed_only
+        output_format: cli # optional: the output format, one of: cli, json, junitxml, github_failed_only
         log_level: WARNING # optional: set log level. Default WARNING
     
 
