--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,18 @@ jobs:
         PRE_BUILD_GIT_SCAN_FLAG: true
     steps:
     - uses: actions/checkout@v2
-    
+
+    - name: Run Checkov for K8S Manifest file
+      id: checkov_docker
+      uses: bridgecrewio/checkov-action@master
+      with:
+        directory: .
+        soft_fail: true # optional: do not return an error code if there are failed checks
+        framework: docker # optional: run only on a specific infrastructure {cloudformation,terraform,kubernetes,all}
+        quiet: true
+        output_format: cli # optional: the output format, one of: cli, json, junitxml, github_failed_only
+        log_level: WARNING # optional: set log level. Default WARNING
+
     - name: Twistcli download
       run: curl -s -k -u $PC_USER:$PC_PASS $PC_CONSOLE_URL/api/v1/util/twistcli -v -o twistcli;chmod +x twistcli
     
@@ -32,8 +43,8 @@ jobs:
     - name: Scan Image with Prisma Cloud
       run: ./twistcli images scan --u $PC_USER --p $PC_PASS --address $PC_CONSOLE_URL --details $IMAGE_NAME
       
-    - name: Run Checkov action
-      id: checkov
+    - name: Run Checkov for K8S Manifest file
+      id: checkov_yaml
       uses: bridgecrewio/checkov-action@master
       with:
         directory: ./deploy
