--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,13 +20,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Run Checkov for K8S Manifest file
+    - name: Run Checkov for Dockerfile
       id: checkov_docker
       uses: bridgecrewio/checkov-action@master
       with:
         directory: .
         soft_fail: true # optional: do not return an error code if there are failed checks
-        framework: docker # optional: run only on a specific infrastructure {cloudformation,terraform,kubernetes,all}
+        framework: dockerfile # (choose from 'cloudformation', 'terraform', 'kubernetes', 'serverless', 'arm', 'terraform_plan', 'helm', 'dockerfile', 'secrets', 'json', 'all')
         quiet: true
         output_format: cli # optional: the output format, one of: cli, json, junitxml, github_failed_only
         log_level: WARNING # optional: set log level. Default WARNING
@@ -49,7 +49,7 @@ jobs:
       with:
         directory: ./deploy
         soft_fail: true # optional: do not return an error code if there are failed checks
-        framework: kubernetes # optional: run only on a specific infrastructure {cloudformation,terraform,kubernetes,all}
+        framework: kubernetes # optional: (choose from 'cloudformation', 'terraform', 'kubernetes', 'serverless', 'arm', 'terraform_plan', 'helm', 'dockerfile', 'secrets', 'json', 'all')
         quiet: true
         output_format: cli # optional: the output format, one of: cli, json, junitxml, github_failed_only
         log_level: WARNING # optional: set log level. Default WARNING
