--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
         PC_CONSOLE_URL: ${{ secrets.PC_CONSOLE_URL }}
         IMAGE_NAME: porec/store-dsvw:latest
         PRE_BUILD_GIT_SCAN_FLAG: true
-        BC_API_KEY: ${{ secrets.BC_API_KEY }}
+ #       BC_API_KEY: ${{ secrets.BC_API_KEY }}
     steps:
     - uses: actions/checkout@v2
 
@@ -57,6 +57,6 @@ jobs:
         quiet: true
         output_format: cli # optional: the output format, one of: cli, json, junitxml, github_failed_only
         log_level: WARNING # optional: set log level. Default WARNING
-        api-key: $BC_API_KEY
+        api-key: ${{ secrets.BC_API_KEY }}
     
 
