--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,6 +49,7 @@ jobs:
       
     - name: Run Checkov for K8S Manifest file
       id: checkov_yaml
+      run: export PRISMA_CLOUD_URL="https://api.prismacloud.io"
       uses: bridgecrewio/bridgecrew-action@master
       with:
         directory: ./deploy
@@ -57,6 +58,6 @@ jobs:
         quiet: true
         output_format: cli # optional: the output format, one of: cli, json, junitxml, github_failed_only
         log_level: WARNING # optional: set log level. Default WARNING
-        api-key: ${{ secrets.BC_API_KEY }}
+        api-key: ${{ secrets.PC_API_KEY }}
     
 
