--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,17 +22,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Run Checkov for Dockerfile
-      id: bridgecrew_docker
-      uses: bridgecrewio/checkov-action@master
-      with:
-        directory: .
-        soft_fail: true # optional: do not return an error code if there are failed checks
-        framework: dockerfile # (choose from 'cloudformation', 'terraform', 'kubernetes', 'serverless', 'arm', 'terraform_plan', 'helm', 'dockerfile', 'secrets', 'json', 'all')
-        quiet: true
-        output_format: cli # optional: the output format, one of: cli, json, junitxml, github_failed_only
-        log_level: WARNING # optional: set log level. Default WARNING
-        api-key: ${{ secrets.BC_API_KEY }}
+ #   - name: Run Checkov for Dockerfile
+ #     id: bridgecrew_docker
+ #     uses: bridgecrewio/checkov-action@master
+ #     with:
+ #       directory: .
+ #       soft_fail: true # optional: do not return an error code if there are failed checks
+ #       framework: dockerfile # (choose from 'cloudformation', 'terraform', 'kubernetes', 'serverless', 'arm', 'terraform_plan', 'helm', 'dockerfile', 'secrets', 'json', 'all')
+ #       quiet: true
+ #       output_format: cli # optional: the output format, one of: cli, json, junitxml, github_failed_only
+ #       log_level: WARNING # optional: set log level. Default WARNING
+ #       api-key: ${{ secrets.BC_API_KEY }}
 
     - name: Twistcli download
       run: curl -s -k -u $PC_USER:$PC_PASS $PC_CONSOLE_URL/api/v1/util/twistcli -v -o twistcli;chmod +x twistcli
@@ -49,16 +49,16 @@ jobs:
     - name: Sandbox image in Prisma Cloud
       run: sudo ./twistcli sandbox -u $PC_USER --p $PC_PASS --address $PC_CONSOLE_URL --output-file "sandbox.json" --analysis-duration 1m $IMAGE_NAME
 
-    - name: Run Checkov for K8S Manifest file
-      id: bridgecrew_yaml
-      uses: bridgecrewio/bridgecrew-action@master
-      with:
-        directory: ./deploy
-        soft_fail: true # optional: do not return an error code if there are failed checks
-        framework: kubernetes # optional: (choose from 'cloudformation', 'terraform', 'kubernetes', 'serverless', 'arm', 'terraform_plan', 'helm', 'dockerfile', 'secrets', 'json', 'all')
-        quiet: true
-        output_format: cli # optional: the output format, one of: cli, json, junitxml, github_failed_only
-        log_level: WARNING # optional: set log level. Default WARNING
-        api-key: ${{ secrets.BC_API_KEY }}
+   # - name: Run Checkov for K8S Manifest file
+   #   id: bridgecrew_yaml
+   #   uses: bridgecrewio/bridgecrew-action@master
+   #   with:
+   #     directory: ./deploy
+   #     soft_fail: true # optional: do not return an error code if there are failed checks
+   #     framework: kubernetes # optional: (choose from 'cloudformation', 'terraform', 'kubernetes', 'serverless', 'arm', 'terraform_plan', 'helm', 'dockerfile', 'secrets', 'json', 'all')
+   #     quiet: true
+   #     output_format: cli # optional: the output format, one of: cli, json, junitxml, github_failed_only
+   #     log_level: WARNING # optional: set log level. Default WARNING
+   #     api-key: ${{ secrets.BC_API_KEY }}
     
 
