--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,7 +38,7 @@ jobs:
       run: curl -s -k -u $PC_USER:$PC_PASS $PC_CONSOLE_URL/api/v1/util/twistcli -v -o twistcli;chmod +x twistcli
     
     - name: Scan Repo with Prisma Cloud
-      run: bash ./scripts/reposcan.sh
+      run: sudo ./twistcli coderepo scan --address $PC_CONSOLE_URL -u $PC_USER -p $PC_PASS --details --repository $GITHUB_REPOSITORY ./
     
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag $IMAGE_NAME
