--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,6 +49,12 @@ jobs:
     - name: Sandbox image in Prisma Cloud
       run: sudo ./twistcli sandbox -u $PC_USER --p $PC_PASS --address $PC_CONSOLE_URL --output-file "sandbox.json" --analysis-duration 1m $IMAGE_NAME
 
+    - name: Upload SARIF file
+      if: ${{ always() }} 
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: ${{ steps.scan.outputs.sarif_file }}
+
     - name: Run Checkov for K8S Manifest file
       id: bridgecrew_yaml
       uses: bridgecrewio/bridgecrew-action@master
