--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -61,7 +61,7 @@ jobs:
       if: ${{ always() }} 
       uses: github/codeql-action/upload-sarif@v1
       with:
-        sarif_file: ${{ steps.scan.outputs.sarif_file }}
+        sarif_file: pcc_scan_results.json
 
     - name: Run Checkov for K8S Manifest file
       id: bridgecrew_yaml
