--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,6 +42,9 @@ jobs:
     
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag $IMAGE_NAME
+      
+    - name: Check label
+      run: docker image inspect --format '{{json .}}' $IMAGE_NAME | jq -r '. | {Labels: .Config.Labels}'
     
     - name: Scan Image with Prisma Cloud
       run: ./twistcli images scan --u $PC_USER --p $PC_PASS --address $PC_CONSOLE_URL --details $IMAGE_NAME
