--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,6 +45,9 @@ jobs:
       
     - name: Check label
       run: docker image inspect $IMAGE_NAME
+      
+    - name: Tag verification
+      run: bash /scripts/tagcheck.sh 
     
     - name: Scan Image with Prisma Cloud
       run: ./twistcli images scan --u $PC_USER --p $PC_PASS --address $PC_CONSOLE_URL --details $IMAGE_NAME
