--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,10 +49,13 @@ jobs:
     
     - name: Scan Image with Prisma Cloud
       run: ./twistcli images scan --u $PC_USER --p $PC_PASS --address $PC_CONSOLE_URL --details $IMAGE_NAME
-      
+
+    - name: Scan API Definition with Prisma Cloud
+      run: ./twistcli waas openapi-scan --u $PC_USER --p $PC_PASS --address $PC_CONSOLE_URL api.json
+            
     - name: Sandbox image in Prisma Cloud
       run: sudo ./twistcli sandbox -u $PC_USER --p $PC_PASS --address $PC_CONSOLE_URL --output-file "sandbox.json" --analysis-duration 1m $IMAGE_NAME
-
+      
     - name: Run Checkov for Terraform template
       id: bridgecrew_tf
       uses: bridgecrewio/bridgecrew-action@master
